--- a/.github/workflows/update_rate.yml
+++ b/.github/workflows/update_rate.yml
@@ -2,29 +2,37 @@ name: 自动同步实时汇率
 
 on:
   schedule:
-    - cron: '0 0 * * *' # 每天北京时间上午8点运行
-  workflow_dispatch: # 允许你手动点击按钮运行
+    - cron: '0 0 * * *'
+  workflow_dispatch:
 
 jobs:
   update:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
 
-      - name: 抓取并替换汇率
+      - name: 抓取汇率并更新 HTML
         run: |
-          # 1. 抓取最新汇率 (USD -> CNY)
+          # 1. 获取汇率
           RATE=$(curl -s https://api.exchangerate-api.com/v4/latest/USD | jq '.rates.CNY')
-          echo "当前最新汇率: $RATE"
+          # 2. 获取当前日期 (北京时间)
+          DATE=$(date -u -d "+8 hours" +%Y-%m-%d)
+          
+          echo "最新汇率: $RATE"
+          echo "更新日期: $DATE"
 
-          # 2. 精准匹配替换：寻找 id="exchangeRate" 并在同一行修改 value
-          # 这个正则专门对应你代码中的格式
+          # 3. 精准替换汇率数值
           sed -i "s/\(id=\"exchangeRate\" value=\"\)[^\"]*\"/\1$RATE\"/g" index.html
+          
+          # 4. 精准替换更新时间
+          sed -i "s/\(id=\"lastUpdate\">\)[^<]*/\1$DATE/g" index.html
 
-      - name: 提交更新到仓库
+      - name: 提交更新
         run: |
           git config --global user.name "Exchange-Bot"
           git config --global user.email "bot@github.com"
           git add index.html
-          git commit -m "自动更新汇率至: $RATE" || exit 0
+          git commit -m "自动更新汇率($RATE)与日期($DATE)" || exit 0
           git push
